--- a/.gitconfig
+++ b/.gitconfig
@@ -31,3 +31,5 @@
     end\n\
     File.open(%(%A), %(w)) {|f| f.write(b)}\n\
     exit 1 if b.include?(%(<)*%L)'"
+[credential]
+	helper = osxkeychain
